--- a/prepros-6.config
+++ b/prepros-6.config
@@ -48,6 +48,8 @@
         "css/blocks/best.scss",
         "css/blocks/menu.scss",
         "css/blocks/burgers.scss",
+        "css/blocks/structure.scss",
+        "css/blocks/cal.scss",
         "css/blocks/team.scss",
         "css/blocks/reviews.scss",
         "css/blocks/work.scss",
