--- a/prepros-6.config
+++ b/prepros-6.config
@@ -40,8 +40,10 @@
         "css/_misk/mixins.scss",
         "css/_misk/fonts.scss",
         "css/_misk/layout.scss",
+        "css/_misk/media.scss",
         "css/blocks/hero.scss",
         "css/blocks/header.scss",
+        "css/blocks/menu__gamburger.scss",
         "css/blocks/nav.scss",
         "css/blocks/button.scss",
         "css/blocks/title.scss",
@@ -55,6 +57,10 @@
         "css/blocks/work.scss",
         "css/blocks/delivery.scss",
         "css/blocks/form.scss",
+        "css/blocks/fixed__menu.scss",
+        "css/blocks/overlay__menu.scss",
+        "css/blocks/modal__mail.scss",
+        "css/blocks/modal__reviews.scss",
         "css/blocks/footer.scss"
       ]
     }
